tests/cases/attributes/unknown_directive.stderr
error: could not resolve macro `memoise`
 --> $DIR/unknown_directive.hash:4:9
3 |   
4 |   Bar := #memoise () -> u32 => {
  |           ^^^^^^^ `memoise` is not a built-in attribute macro
5 |       into_bar: (T) -> Self
