tests/cases/attributes/unknown_directive.hash
// run=fail, stage=semantic


Bar := #memoise () -> u32 => {
    into_bar: (T) -> Self
}

main := () => {
    t := #dump_ast {
        k := perform_operation()
        unmerge(k)
    }
}
